--- a/College/Views/Shared/_adminLayout.cshtml
+++ b/College/Views/Shared/_adminLayout.cshtml
@@ -86,7 +86,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="events.html">
+            <a class="nav-link" href="@Url.Action("Teachers", "Admin")">
               <i class="fa fa-chalkboard-user menu-icon"></i>
               <span class="menu-title">Teachers</span>
             </a>
