--- a/College/Views/Admin/Dashboard.cshtml
+++ b/College/Views/Admin/Dashboard.cshtml
@@ -5,7 +5,7 @@
 <h4 class="my-3">Dashboard</h4>
 <div class="col-md-3 grid-margin stretch-card">
     <div class="card">
-        <a href="events.html">
+        <a href="@Url.Action("Registrations", "Admin")">
             <div class="card-body">
                 <p class="card-title text-md-center text-xl-left">Registrations</p>
                 <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
@@ -19,7 +19,7 @@
 
 <div class="col-md-3 grid-margin stretch-card">
     <div class="card">
-        <a href="href=" @Url.Action("Students", "Admin")"">
+        <a href="@Url.Action("Students", "Admin")">
             <div class="card-body">
                 <p class="card-title text-md-center text-xl-left">Students</p>
                 <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
