--- a/College/Views/Shared/_Layout.cshtml
+++ b/College/Views/Shared/_Layout.cshtml
@@ -108,22 +108,19 @@
                     <div class="col-lg-2 col-md-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="@Url.Action("Index")">Home</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="@Url.Action("Courses")">Courses</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="@Url.Action("Admission")">Admission</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="@Url.Action("Teachers")">Trainers</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Our Services</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="@Url.Action("Faculty")">Faculty</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="@Url.Action("Contact")">Contact Us</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="@Url.Action("about")">About</a></li>
                         </ul>
                     </div>
 
